baml_language/crates/baml_tests/snapshots/namespaces_shadow/baml_tests__namespaces_shadow__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.foo {
  x: int
}
class user.foo.Bar {
  y: string
}
