baml_language/crates/baml_tests/snapshots/namespaces_shadow/baml_tests__namespaces_shadow__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Warning: unreachable arm
   ╭─[ registry.baml:1:1 ]
   │
 1 │ // root.TestCollector — collector for tests and testsets.
   │ │ 
   │ ╰─ unreachable arm
   │ 
   │ Note: Error code: E0001
───╯

  [type] Warning: unreachable arm
     ╭─[ registry.baml:182:2 ]
     │
 182 │ ╭─▶         RunReport { outcome: "fail", duration_ms: 0 }
     ┆ ┆   
 184 │ ├─▶     }
     │ │           
     │ ╰─────────── unreachable arm
     │     
     │     Note: Error code: E0001
─────╯

  [validation] Warning: Namespace `foo` (from `ns_foo/`) shadows root-level class `foo`
   ╭─[ main.baml:3:7 ]
   │
 3 │ class foo {
   │       ─┬─  
   │        ╰─── this class is shadowed by namespace `foo`
   │ 
   │ Note: Error code: E0099
───╯
